--- a/themes/mrg/css/sass/_mrg-fixes.scss
+++ b/themes/mrg/css/sass/_mrg-fixes.scss
@@ -137,7 +137,7 @@ body.page-ciudad .getting-here-list {
 		content: ""; 
 		width: 2px;
 		height: 90%; 
-		background-color: $orange; 
+		background-color: $light-blue; 
 		position: absolute; 
 		left: 50%;
 	} 
@@ -149,7 +149,7 @@ body.page-ciudad .getting-here-list {
 		padding: 0.8em;  
 		background-color: #fff; 
 		text-align: center; 
-		border: 2px solid $orange; 
+		border: 2px solid $light-blue; 
 		display: inline-block;
 	} 
 }
@@ -220,7 +220,7 @@ body.page-ciudad .thumbnails  {
 	position: relative;
 	cursor: pointer;
 	margin: 0 1em;
-	border-top: 10px solid $orange;
+	border-top: 10px solid $light-blue;
 	
 	.flex-direction-nav {
 		width: 100%;
@@ -259,7 +259,7 @@ body.page-ciudad .thumbnails  {
 		margin-top: 0px;
 		margin-bottom: 40px;
 		padding-bottom: 4px;
-		border-bottom: 2px solid $orange;
+		border-bottom: 2px solid $light-blue;
 		text-align: left;
 		color: $deep-blue;
 		font-size: 48px;
@@ -424,7 +424,7 @@ form.form-subscribe {
 }
 
 form.form-subscribe-cleaner {
-	border: 2px solid $orange;
+	border: 2px solid $light-blue;
 	padding: 1em;
 	border-radius: 1em;
 	margin: 2em auto;
@@ -493,7 +493,7 @@ form.form-subscribe-cleaner {
 
 	[type="submit"] {
 		border: 1px solid #fff;
-		background-color: $orange;
+		@include linear-gradient-2020();
 		color: #fff;	
 		width: auto;
 		padding: 1em 1.7em !important;
@@ -929,7 +929,7 @@ body.post-type-archive-centros_salud {
 
 .nnice-cta {
 
-	background-color: $orange;
+	background-color: $light-blue;
 	border-radius: 10px;
 	
 	.row > .col {
@@ -948,7 +948,7 @@ body.post-type-archive-centros_salud {
 		padding: 11px 25px;
 		border: 2px solid #fff;
 		border-radius: 5px;
-		background-color: $orange;
+		background-color: $light-blue;
 		font-family: Muli,sans-serif;
 		color: #fff;
 		font-size: 17px;
@@ -1076,14 +1076,14 @@ body.post-type-archive-centros_salud {
 
 	.congreso-educacion-accordion {
 		.time {
-			color: $orange;
+			color: $light-blue;
 			
 			.arrow.arrow-down::before{
-				border-top-color: $orange;
+				border-top-color: $light-blue;
 				
 			}
 			.arrow.arrow-left::before{
-				border-left-color: $orange;
+				border-left-color: $light-blue;
 			}			
 			
 			&:hover {
@@ -1121,7 +1121,7 @@ body.post-type-archive-centros_salud {
 					font-weight: bold;
 					font-size: 1.2em;
 					min-height: 60px;
-					border-bottom: 1px solid $orange;
+					border-bottom: 1px solid $light-blue;
 					text-align: center;
 					line-height: 1.3em;
 					margin-bottom: 1em;
@@ -1242,7 +1242,7 @@ body.page-espacio-tecnologico {
 	
 	.text {
 		color: #fff !important;
-		background-color: $orange !important;
+		background-color: $light-blue !important;
 		font-weight: bold !important;
 		font-size: 2.3em !important;
 		padding: 1em !important;
