--- a/themes/mrg/css/sass/_mrg-page-layout.scss
+++ b/themes/mrg/css/sass/_mrg-page-layout.scss
@@ -76,7 +76,7 @@
 		display: inline-block;
 		margin-right: 1em;
 
-		color: $orange;
+		color: $light-blue;
 		font-weight: 700;
 		text-transform: uppercase;
 		font-size: 14px;
@@ -300,7 +300,7 @@
 		}
 
 		.progress-text {
-			color: $orange;
+			color: $light-blue;
 			font-size: 1.2em;
 			line-height: 1.2em;
 			font-weight: 900;
@@ -366,7 +366,7 @@
 	
 		.number {
 			border-radius: 2em;
-			background-color: $orange;
+			background-color: $light-blue;
 			color: #fff;
 			font-size: 2em;
 			line-height: 1.5em;
@@ -423,7 +423,7 @@
 			.heading {
 				margin-bottom: 0px;
 				padding: 9px 0;
-				background-color: $orange;
+				background-color: $light-blue;
 				color: #fff;
 				font-size: 18px;
 				line-height: 27px;
