--- a/themes/mrg/css/fixes.css
+++ b/themes/mrg/css/fixes.css
@@ -1579,6 +1579,30 @@ body.page-municipio table {
   background: linear-gradient(180deg, #14a2db 0%, #2ab99e 100%);
 }
 
+#menu_wrapper {
+  display: flex !important;
+  justify-content: space-between;
+}
+#menu_wrapper .col-right {
+  display: flex;
+  margin-right: 0.6em;
+}
+#menu_wrapper .content-weather {
+  order: 2;
+}
+#menu_wrapper #searchform {
+  order: 1;
+}
+#menu_wrapper .header-escudo {
+  order: 3;
+  padding-top: 0.3em;
+}
+#menu_wrapper .header-escudo img {
+  height: 90px;
+  vertical-align: middle;
+  display: inline-block;
+}
+
 .effect-enlarge-shadow:hover {
   -webkit-transform: scale(1.015);
   -ms-transform: scale(1.015);
