arreglo tipografia - iconos

--- a/themes/mrg/css/sass/main.scss
+++ b/themes/mrg/css/sass/main.scss
@@ -45,7 +45,7 @@ $main-font: 'Humanst 512 BT', Arial, sans-serif;
 	background: linear-gradient(180deg, $light-blue 0%, $aqua-green 100%);
 }
 
-*, body {
+body {
 	font-family: $main-font !important;
 }
 
