--- a/themes/mrg/css/fixes.css
+++ b/themes/mrg/css/fixes.css
@@ -25,7 +25,7 @@
   font-weight: bold;
   font-style: italic;
 }
-*, body {
+body {
   font-family: "Humanst 512 BT", Arial, sans-serif !important;
 }
 
