--- a/themes/mrg/css/fixes.css
+++ b/themes/mrg/css/fixes.css
@@ -1650,6 +1650,10 @@ body.page-municipio table {
   display: inline-block;
 }
 
+.page-breadcrumb ul li:nth-child(5n) a {
+  color: #2ab99e;
+}
+
 @font-face {
   font-family: "Humanst 512 BT";
   src: url("../fonts/humanst512-bt.ttf") format("truetype");
