--- a/themes/mrg/css/sass/_mrg-page-layout.scss
+++ b/themes/mrg/css/sass/_mrg-page-layout.scss
@@ -9,11 +9,11 @@
 }
 
 .page-template {
-	font-size: 18px;
 	font-family: $main-font;
+	line-height: 1.4em;
 
 	.has-medium-font-size {
-		font-size: 1.5em !important;
+		font-size: 1.2em !important;
 		line-height: 1.3em !important;	
 	}
 	h3 {
@@ -114,7 +114,7 @@
 	h2 {
 		font-weight: 900;
 		color: $aqua-green;
-		font-size: 4.4em;
+		font-size: 4.0em;
 		line-height: 1em;
 		margin-bottom: 0.6em;
 	}
