--- a/themes/mrg/css/sass/main.scss
+++ b/themes/mrg/css/sass/main.scss
@@ -47,6 +47,7 @@ $main-font: 'Humanst 512 BT', Arial, sans-serif;
 
 body {
 	font-family: $main-font !important;
+	font-size: 20px;
 }
 
 h1,h2,h3,h4,h5,h6 {
