--- a/themes/mrg/css/sass/_mrg-fixes.scss
+++ b/themes/mrg/css/sass/_mrg-fixes.scss
@@ -1269,7 +1269,7 @@ body.page-espacio-tecnologico {
 }
 
 .tablepress tfoot th, .tablepress thead th {
-   background-color: #e7e7e7 !important;
+   background-color: $aqua-green !important;
 	border-bottom: 0 !important;
 }
 
