--- a/themes/mrg/css/sass/_mrg-page-layout.scss
+++ b/themes/mrg/css/sass/_mrg-page-layout.scss
@@ -415,6 +415,10 @@
 			img {
 				width: 100%;
 			}
+
+			max-height: 214px;
+			overflow: hidden;
+			border-radius: 10px;
 		}
 
 		&.with-heading {
