--- a/themes/mrg/css/sass/_mrg-fixes.scss
+++ b/themes/mrg/css/sass/_mrg-fixes.scss
@@ -1680,3 +1680,7 @@ body.page-transparencia {
 		dl div { flex-direction: column; }
 	}
 }
+
+body.home #wrapper .slider_wrapper .slide {
+	margin-bottom: 0;
+}
